--- a/LocadoraFilmes.Api/appsettings.json
+++ b/LocadoraFilmes.Api/appsettings.json
@@ -1,9 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DbContext": "DataSource=app.db;Cache=Shared",
-    "DbContext": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=LocadoraFilmes;Data Source=DESKTOP-UCN47G5\\SQLEXPRESS; TrustServerCertificate=True;"
+    "DbContext": "Server=tcp:locadora-filmes.database.windows.net,1433;Initial Catalog=LocadoraFilmes;Persist Security Info=False;User ID=feliperoot;Password=f5g4b1@6%64;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-
   "SecretKey": "fedaf7d8863b48e197b9287d492b708e",
 
   "Logging": {
